examples/negative/type_invariants/arith_string.kai
# Negative fixture (#520 / type system): `+` is the Int
# arithmetic operator; concatenation lives in `<>`. Mixing
# Int and String must be rejected with a type-mismatch
# diagnostic on the arithmetic operator.

fn main() : Int {
  let x = 1 + "two"
  x
}
